[gd_scene load_steps=17 format=3 uid="uid://bo3fvlnvpxwp7"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_74u1p"]
[ext_resource type="FontFile" uid="uid://d21xmol7rcg7v" path="res://Assets/Fonts/mago3.ttf" id="2_pb6gv"]
[ext_resource type="PackedScene" uid="uid://dwalwta4he3f5" path="res://Scenes/background_menu_scene.tscn" id="2_r144r"]
[ext_resource type="AudioStream" uid="uid://bggl5ghbn4dnk" path="res://Assets/Audio/NotUsedYet/725750__maria_mannone__d-d5_shinobue.wav" id="3_76wy2"]
[ext_resource type="Texture2D" uid="uid://uh78n45s5yyy" path="res://Assets/UI/menuButtons/SaveButton/save.png" id="5_oritf"]
[ext_resource type="Texture2D" uid="uid://cqkq7y2kbygy5" path="res://Assets/UI/menuButtons/SettingButton/setting.png" id="6_0m64o"]
[ext_resource type="Texture2D" uid="uid://bspdxbysne3nd" path="res://Assets/UI/menuButtons/SettingButton/settingPressed.png" id="6_yr4sb"]
[ext_resource type="Texture2D" uid="uid://db3ouho11ggu7" path="res://Assets/UI/menuButtons/SaveButton/saveNormal.png" id="8_uh2mp"]
[ext_resource type="Texture2D" uid="uid://c4emdopy17oef" path="res://Assets/UI/menuButtons/SaveButton/savePressed.png" id="9_o01aj"]
[ext_resource type="AudioStream" uid="uid://cyjfdmg1yhcod" path="res://Assets/Audio/574821__wesleyextreme_gamer__slash1.mp3" id="10_ebwyo"]
[ext_resource type="Texture2D" uid="uid://bcjo1i2uot145" path="res://Assets/UI/menuButtons/ExitButton/Exit.png" id="11_yskl4"]
[ext_resource type="Texture2D" uid="uid://c76fph13ece3t" path="res://Assets/UI/menuButtons/ExitButton/ExitPressed.png" id="12_vyq4a"]
[ext_resource type="Script" path="res://Scenes/creditLabel.gd" id="13_gmqwx"]

[sub_resource type="LabelSettings" id="LabelSettings_rt325"]
font = ExtResource("2_pb6gv")
font_size = 104

[sub_resource type="LabelSettings" id="LabelSettings_7ljes"]
font = ExtResource("2_pb6gv")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_xkfqk"]
font_size = 64

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_74u1p")

[node name="BackgroundMenuScene" parent="." instance=ExtResource("2_r144r")]

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 593.0
offset_bottom = 272.0
color = Color(0, 0, 0, 0.431373)

[node name="MainMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="MainMenu"]
layout_mode = 0
offset_right = 589.0
offset_bottom = 273.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="MainMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "UNT UCHED"
label_settings = SubResource("LabelSettings_rt325")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScore" type="Label" parent="MainMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_7ljes")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="PlayButton" type="Button" parent="MainMenu/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="QuitButton" type="Button" parent="MainMenu/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="ExtraButtons" type="VBoxContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.941
anchor_right = 1.0
anchor_bottom = 0.25
offset_left = -0.0720215
offset_right = -3.0
grow_horizontal = 0

[node name="OptionsButton" type="TextureButton" parent="MainMenu/ExtraButtons"]
layout_mode = 2
texture_normal = ExtResource("6_0m64o")
texture_pressed = ExtResource("6_0m64o")
texture_hover = ExtResource("6_yr4sb")
stretch_mode = 4

[node name="CreditsButton" type="TextureButton" parent="MainMenu/ExtraButtons"]
layout_mode = 2
texture_normal = ExtResource("5_oritf")
texture_pressed = ExtResource("8_uh2mp")
texture_hover = ExtResource("9_o01aj")
stretch_mode = 4

[node name="OptionsMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsCont" type="CenterContainer" parent="OptionsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -3.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenu/OptionsCont"]
layout_mode = 2
theme_override_constants/separation = 21
alignment = 1

[node name="Label" type="Label" parent="OptionsMenu/OptionsCont/VBoxContainer"]
layout_mode = 2
text = "OPTIONS"
label_settings = SubResource("LabelSettings_xkfqk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MasterVol" type="HBoxContainer" parent="OptionsMenu/OptionsCont/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="OptionsMenu/OptionsCont/VBoxContainer/MasterVol"]
layout_mode = 2
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="OptionsMenu/OptionsCont/VBoxContainer/MasterVol"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="MusicVol" type="HBoxContainer" parent="OptionsMenu/OptionsCont/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="OptionsMenu/OptionsCont/VBoxContainer/MusicVol"]
layout_mode = 2
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="OptionsMenu/OptionsCont/VBoxContainer/MusicVol"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="SFXVol" type="HBoxContainer" parent="OptionsMenu/OptionsCont/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="OptionsMenu/OptionsCont/VBoxContainer/SFXVol"]
layout_mode = 2
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="OptionsMenu/OptionsCont/VBoxContainer/SFXVol"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="Button" type="Button" parent="OptionsMenu/OptionsCont/VBoxContainer"]
layout_mode = 2
text = "Erase Highscores"

[node name="BackToMainButton" type="TextureButton" parent="OptionsMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_top = 0.015
anchor_right = 0.046
anchor_bottom = 0.118
offset_left = 0.0399997
offset_top = -0.0799999
offset_right = -0.232002
offset_bottom = -0.0960007
texture_normal = ExtResource("11_yskl4")
texture_pressed = ExtResource("11_yskl4")
texture_hover = ExtResource("12_vyq4a")

[node name="Sounds" type="Node" parent="."]
process_mode = 3

[node name="MatchStarted" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("3_76wy2")

[node name="TestSFX" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("10_ebwyo")
volume_db = -15.0
bus = &"SFX"

[node name="Credits" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="Credits"]
layout_mode = 0
offset_right = 588.0
offset_bottom = 270.0
bbcode_enabled = true
text = "[center]
[font_size=64] UNTOUCHED [/font_size]

[font_size=32] A game by Javier Jimenez-Alfaro Hacha [/font_size]

[font_size=32] Assets Used: [/font_size]

Visual:
[url=https://aethrall.itch.io/demon-woods-parallax-background]
Game Background[/url]
[url=https://luizmelo.itch.io/monsters-creatures-fantasy]
Mushroom Enemy[/url]
[url=https://xzany.itch.io/samurai-4-pixel-art]
Samurai Pixel Art[/url]
[url=https://nimblebeastscollective.itch.io/magosfonts]
Mago Fonts[/url]
[url=https://srtoasty.itch.io/ui-assets-pack-2]
UI Asset Pack[/url]
[url=https://pimen.itch.io/smoke-vfx-1]
Smoke VFX[/url]
[url=https://leo-red.itch.io/lucid-icon-pack]
Lucid Icon Pack[/url]
[url=https://free-game-assets.itch.io/free-sky-with-clouds-background-pixel-art-set]
Main menu background[/url]

Sound effects: 
[url=https://freesound.org/people/morgantj/sounds/60756/]
Whip sound[/url]
[url=https://freesound.org/people/32cheeseman32/sounds/180837/]
Sword Swing[/url]
[url=https://freesound.org/people/wesleyextreme_gamer/sounds/574821/]
Slash[/url]
[url=https://freesound.org/people/beautifuldaymonster1968/sounds/706824/]
Wood Dropped[/url]

[font_size=32] Special Thanks to: [/font_size]

Mar, for her great art and visual counceling üñåÔ∏è

Antonio, for his coding help and structured thinking üíª

Dino, for his everyday support üê∏

Javi, for his always available linux wizard help üßô‚Äç‚ôÇÔ∏è"
script = ExtResource("13_gmqwx")

[node name="BackToMainButtonCredits" type="TextureButton" parent="Credits"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_top = 0.015
anchor_right = 0.046
anchor_bottom = 0.118
offset_left = 0.0399997
offset_top = -0.0799999
offset_right = -0.232002
offset_bottom = -0.0960007
texture_normal = ExtResource("11_yskl4")
texture_pressed = ExtResource("11_yskl4")
texture_hover = ExtResource("12_vyq4a")

[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MainMenu/ExtraButtons/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MainMenu/ExtraButtons/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="value_changed" from="OptionsMenu/OptionsCont/VBoxContainer/MasterVol/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="OptionsMenu/OptionsCont/VBoxContainer/MusicVol/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="drag_ended" from="OptionsMenu/OptionsCont/VBoxContainer/SFXVol/SFXSlider" to="." method="_on_sfx_slider_drag_ended"]
[connection signal="value_changed" from="OptionsMenu/OptionsCont/VBoxContainer/SFXVol/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="OptionsMenu/OptionsCont/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="OptionsMenu/BackToMainButton" to="." method="_on_back_to_main_button_pressed"]
[connection signal="pressed" from="Credits/BackToMainButtonCredits" to="." method="_on_back_to_main_button_credits_pressed"]
